# hyppo

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
benchmark/config/: datasets.yaml  extractors.yaml  slurm.yaml
benchmark/scripts/: convert_mat_to_h5.py  run_local_benchmark.py  run_validation.py  submit_benchmark.sh  submit_validation.sh
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/source/: architecture.rst  changelog.rst  conf.py  contributing.rst  index.rst  install.rst  troubleshooting.rst
docs/source/_dynamic/: README.rst  placeholder
docs/source/_static/css/: hyppo.css
docs/source/api/: core.rst  extractors.rst  index.rst  io.rst  runners.rst
docs/source/api/core/: feature.rst  feature_space.rst  hsi.rst  index.rst
docs/source/api/extractor/: base.rst  dwt1d.rst  dwt2d.rst  dwt3d.rst  gabor.rst  geometricmoment.rst  glcm.rst  ica.rst  index.rst  lbp.rst  legendremoment.rst  mean.rst  mnf.rst  mp.rst  ndvi.rst  ndwi.rst  pca.rst  pp.rst  registry.rst  savi.rst  std.rst  zernikemoment.rst
docs/source/api/io/: config.rst  features.rst  hsi.rst  index.rst
docs/source/api/runner/: base.rst  comparison.rst  dask.rst  index.rst  sequential.rst
docs/source/tutorial/: adding_extractors.rst  advanced_usage.rst  basic_usage.rst  config.rst  config_examples.rst  hsi_io.rst  index.rst
hyppo/: __init__.py  __main__.py  cli.py  cli2.py  feature_dependency_graph.py  feature_space.py  hsi.py  io.py  prueba.ipynb  utils.py
hyppo/cli/: __init__.py  manager.py  utils.py
hyppo/core/: __init__.py  _feature_dependency_graph.py  _feature_space.py  _feature_space_result.py  _hsi.py  _hsi_plot.py
hyppo/core/_feature_space/: __init__.py  dependency_graph.py  feature.py  feature_result.py  feature_space.py
hyppo/extractor/: __init__.py  _dwt_utils.py  _spectral_utils.py  _validators.py  base.py  combined.py  dummy.py  dwt1d.py  dwt2d.py  dwt3d.py  gabor.py  geometricmoment.py  glcm.py  ica.py  lbp.py  legendremoment.py  max.py  mean.py  median.py  min.py  mnf.py  mp.py  ndvi.py  ndwi.py  pca.py  pp.py  registry.py  savi.py  spatial.py  spectral.py  std.py  zernikemoment.py
hyppo/io/: __init__.py  _hsi.py
hyppo/io/_config/: __init__.py  config.py  executor.py  loader.py  models.py  parser.py  saver.py  validator.py
hyppo/io/_features/: __init__.py  h5.py
hyppo/io/_hsi/: __init__.py  h5.py
hyppo/runner/: __init__.py  _dask.py  base.py  dask.py  local_process.py  processes.py  registry.py  sequential.py  threads.py
hyppo/utils/: __init__.py  attr_dict.py  bunch.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_extractors.py  test_feature_dependency_graph.py  test_feature_space.py  test_hsi.py  test_io.py
tests/core/: __init__.py  test_feature_dependency_graph.py  test_feature_space.py  test_hsi.py  test_results.py
tests/extractor/: __init__.py  test_base.py  test_dwt1d.py  test_dwt2d.py  test_dwt3d.py  test_extractors.py  test_gabor.py  test_geometricmoment.py  test_glcm.py  test_ica.py  test_lbp.py  test_legendremoment.py  test_mnf.py  test_mp.py  test_ndvi.py  test_ndwi.py  test_pca.py  test_pp.py  test_registry.py  test_savi.py  test_zernikemoment.py
tests/fixtures/: extractors.py  hsi.py
tests/io/: __init__.py  test_features.py  test_hsi.py
tests/io/config/: __init__.py  test_config.py  test_config_loader.py  test_config_saver.py  test_integration.py  test_models.py  test_parser.py
tests/runner/: __init__.py  test_base.py  test_dask.py  test_local_process.py  test_registry.py  test_sequential.py
tests/runners/: test_processes.py  test_threads.py
tests/utils/: test_bunch.py
