[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "hyppo"
version = "0.1.dev0"
description = "HYPPO (Hyperspectral Processing) - A modular feature extractor for hyperspectral images"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Tomás Ponce Gessi", email = "tomaspgessi@mi.unc.edu.ar"},
]
keywords = ["hyperspectral", "image-processing", "feature-extraction", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "dask[distributed]==2026.1.2",
    "h5py==3.16.0",
    "numpy==2.4.3",
    "scipy==1.17.1",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "attrs>=22.0",
    "scikit-learn==1.8.0",
    "scikit-image==0.26.0",
    "PyWavelets==1.9.0",
    "pandas==3.0.1",
]

[project.urls]
Repository = "https://github.com/quatrope/hyppo"
Issues = "https://github.com/quatrope/hyppo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "tox>=4.0",
    "radon>=5.1",
    "xenon>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hyppo*"]
namespaces = false

[tool.black]
line-length = 79


[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["hyppo", "tests"]
force_sort_within_sections = true
force_single_line = false
no_lines_before = ["LOCALFOLDER"]

[tool.flake8]
max-line-length = 79
application-import-names = "hyppo,tests"
import-order-style = "google"
per-file-ignores = [
    "hyppo/io/__init__.py:A005",
    "tests/io/__init__.py:A005"
]
extend-ignore = ["E203"]
